# AVSystemIntership

./: CMakeLists.txt  README.md  input.json  main.c  parser.py
tests/: expected_output.txt  test_input.txt
